# text_menu-py

./: .gitignore  .mk  README.md  requirements.txt  run  setup.cfg  setup.py  setup.yml  text_menu.py
