[metadata]
name = text_menu-twh2898
version = 0.1.1
author = Thomas Harrison
author_email = twh2898@vt.edu
description = An set of console menu functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/twh2898/text_menu-py
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where =
